FIX: icon, dropdown, z-index

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 1;
 }
 
 img{
@@ -64,6 +65,11 @@ header .navbar .dropdown-menu  {
     background-color: black; 
     width: 100%;
 }
+
+.detail:hover .dropdown-menu {
+    display: block;
+}
+
 .home{
     display: flex;
     align-items: center;
@@ -241,7 +247,33 @@ header .navbar .dropdown-menu  {
     letter-spacing: .5px;
 }
 
-.icon-contact a{
+/* .icon-contact a{
     border-radius: 50px 50px 50px 50px;
     font-size: var(--icon-size,35px);
+} */
+
+
+/* Start Icon */
+
+.icon-contact {
+    display: flex;
+    gap: 5px;
 }
+
+.icon {
+    background: white;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon i {
+    margin: 0 auto;
+    font-size: large;
+    color: white;
+}
+
+/* End Icon */
